--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,96 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-
-        <title>Mans portfolio</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/mansStils.css">
-        <link rel="stylesheet" href="skola.html">
-        <link rel="stylesheet" href="baiti.html">
-
-    </head>
-    <body>
-
-        <div class="w3-top">
-            <div class="w3-black w3-card">
-                <div class="w3-bar-item">
-                    <a class="w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-                </div>
-                <div class="w3-bar-item">
-                    <a href="#" class="w3-button w3-padding-large">SĀKUMS</a>
-                    <div class="w3-dropdown-hover w3-hide-small">
-                        <button class="w3-padding-large w3-button" title="atteli">ATTĒLI <i class="fa fa-caret-down"></i></button>     
-                        <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                            <a href="#GIMP" class="w3-bar-item w3-button">GIMP</a>
-                            <a href="#INKSCAPE" class="w3-bar-item w3-button">INKSCAPE</a>
-                        </div>
+<head>
+    <title>Mans portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/mansStils.css">
+</head>
+<body>
+    <div class="w3-top">
+        <div class="w3-black w3-card">
+            <div class="w3-bar-item">
+                <a class="w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+            </div>
+            <div class="w3-bar-item">
+                <a href="#" class="w3-button w3-padding-large">SĀKUMS</a>
+                <div class="w3-dropdown-hover w3-hide-small">
+                    <button class="w3-padding-large w3-button" title="atteli">ATTĒLU APSTRĀDE<i class="fa fa-caret-down"></i></button>     
+                    <div class="w3-dropdown-content w3-bar-block w3-card-4">
+                        <a href="#GIMP" class="w3-bar-item w3-button">RAKSTGRAFIKA</a>
+                        <a href="#INKSCAPE" class="w3-bar-item w3-button">VEKTORGRAFIKA</a>
                     </div>
                 </div>
-                <div class="w3-bar-item">
-                    <a href="#video" class="w3-button w3-padding-large w3-hide-small">VIDEO</a>
-                </div>
-                <div class="w3-bar-item">
-                    <a href="#teksts" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TEKSTS</a>
-                </div>
-                <div class="w3-bar-item">
-                    <a href="#izklajlapas" class="w3-bar-item w3-button w3-padding-large w3-hide-small">IZKLĀJLAPAS</a>
-                </div>                <div class="w3-bar-item">
-                    <a href="otrais.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">INDIVIDUĀLĀ TĒMA</a>
-                </div>
-                <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
-
             </div>
+            <div class="w3-bar-item">
+                <a href="#video" class="w3-button w3-padding-large w3-hide-small">VIDEO</a>
+            </div>
+            <div class="w3-bar-item">
+                <a href="#teksts" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TEKSTAPSTRĀDE</a>
+            </div>
+            <div class="w3-bar-item">
+                <a href="#izklajlapas" class="w3-bar-item w3-button w3-padding-large w3-hide-small">IZKLĀJLAPAS</a>
+            </div>
+            <div class="w3-bar-item">
+                <a href="otrais.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">INDIVIDUĀLĀ TĒMA</a>
+            </div>
+            <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"></a>
         </div>
-        <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-            <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ATTĒLU APSTRĀDE</a>
-            <a href="#video" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">VIDEO</a>
-            <a href="#otrais" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">INDIVIDUĀLĀ TĒMA</a>
+    </div>
+    <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+        <a href="#atteli" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ATTĒLU APSTRĀDE</a>
+        <a href="#video" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">VIDEO</a>
+        <a href="#teksts" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TEKSTAPSTRĀDE</a>
+        <a href="#izklajlapas" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">IZKLĀJLAPAS</a>
+        <a href="otrais.html" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">INDIVIDUĀLĀ TĒMA</a>
+    </div>
+    <div class="w3-container main-content">
+        <a href="skola.html">skola</a>
+        <a href="baiti.html">baiti</a>
+        <h1 class="center">Mans datorikas portfolio</h1>
+        <h2 id="atteli">Attēlu apstrāde</h2>
+        <p>Attēlu apstrādē mēs apguvām:</p>
+        <div id="GIMP" class="section" style="padding-top:50px">
+            <li><b>Rakstgrafika</b> - GIMP</li>
+            <img src="images/gimp_img.png">
+            <img src="images/musa.gif" width="500" height="500">
+            <p></p>
         </div>
-        <div class="w3-container main-content">
-            <a href="skola.html">skola<a/>
-                <a href="baiti.html">baiti</a>
-                <h1 class="center">Mans datorikas portfolio</h1>
-                <h2>Attēlu apstrāde</h2>
-                <p>Attēlu apstrādē mēs apguvām:</p>
-                <div id="GIMP" class="section" style="padding-top:50px">
-                    <li><b>Rakstgrafika</b> - GIMP</li>
-                    <img src="images/gimp_img.png">
-                    <img src="images/musa.gif" width="500" height="500">
-                    <p> 
-                    </p>
-                </div>
-                <div id="INKSCAPE" class="section" style="padding-top:50px">
-                    <li><b>Vektorgrafika</b><p> - Inkscape</P>
-                        <p> - 3D modelēšana</P></li>
-                    <h3>Inkscape</h3>
-                    <img src="images/degreez_logo.png">
-                    <h3>3D modelēšana</h3>
-                    <img src="images/kubs.png">
-                    <p></p>
-                    <h2 id="video" class="section" style="padding-top: 50px">Video montēšana</h2>
-                    <video width="640" height="360" controls autoplay loop muted poster="path/to/poster-image.jpg">
-                        <source src="images/3D KUBS.mp4" type="video/mp4">
-                    </video>
-                    <br>
-                    <h2 id="teksts" class="section" style="padding-top: 50px">Teksta apstrāde</h2>
-                    <p>Apguvām Wordu:</p>
-                    <img src="images/Word_turisms.png">
-                    <p></p>
-                    <h2 id="izklajlapas" class="section" style="padding-top: 50px">Izklājlapas</h2>
-                    <p>Apguvām Excel:</p>
-                    <img src="images/excel_img.png">
-
-
-
-                </div>
-
-                </body>
-
-                </html>
+        <div id="INKSCAPE" class="section" style="padding-top:50px">
+           <li>
+               <b>Vektorgrafika</b><p> - Inkscape</p>
+               <p> - 3D modelēšana</p>
+           </li>
+           <h3>Inkscape</h3>
+           <img src="images/degreez_logo.png">
+           <h3>3D modelēšana</h3>
+           <img src="images/kubs.png">
+           <p></p>
+           <h2 id="video" class="section" style="padding-top: 50px">Video montēšana</h2>
+           <video width="640" height="360" controls autoplay loop muted poster="path/to/poster-image.jpg">
+                <source src="images/3D KUBS.mp4" type="video/mp4">
+            </video>
+            <br>
+            <h2 id="teksts" class="section" style="padding-top: 50px">Teksta apstrāde</h2>
+            <p>Apguvām Wordu:</p>
+            <img src="images/Word_turisms.png">
+            <p></p>
+            <h2 id="izklajlapas" class="section" style="padding-top: 50px">Izklājlapas</h2>
+            <p>Apguvām Excel:</p>
+            <img src="images/excel_img.png">
+        </div>
+    </div>
+    <script>
+        function myFunction() {
+            var x = document.getElementById("navDemo");
+            if (x.className.indexOf("w3-show") == -1) {
+                x.className += " w3-show";
+            } else { 
+                x.className = x.className.replace(" w3-show", "");
+            }
+        }
+    </script>
+</body>
+</html>
